tests/copilot_helper/fixtures/make_addons/expected/environments/addons/my-rds-db.yml
# Generated by copilot-helper v0.1-TEST / 2023-08-22 16:00:00

Parameters:
  # Copilot required Parameters...
  App:
    Type: String
    Description: Your application's name.
  Env:
    Type: String
    Description: The environment name your service, job, or workflow is being deployed to.

  # Parameters from the parent stack brought in via addons.parameters.yml...
  EnvironmentSecurityGroup:
    Type: String
  DefaultPublicRoute:
    Type: String
  InternetGateway:
    Type: String
  InternetGatewayAttachment:
    Type: String
  PrivateSubnets:
    Type: String
  PublicRouteTable:
    Type: String
  PublicSubnet1RouteTableAssociation:
    Type: String
  PublicSubnet2RouteTableAssociation:
    Type: String
  VpcId:
    Type: String

  # Other parameters...
  # Customize your RDS Postgres cluster by setting the default value of the following parameters.
  myRdsDbDBName:
    Type: String
    Description: The name of the initial database to be created.
    Default: main
    # Cannot have special characters
    # Naming constraints: https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_Limits.html#RDS_Limits.Constraints

Mappings:
  myRdsDbEnvironmentConfigMap:
    development:
      DBInstanceClass: 'db.t3.small'
      MultiAZ: True
      AllocatedStorage: 100
      MaxAllocatedStorage: 126
      StorageType: gp3
      DeletionPolicy: Delete
      DeletionProtection: False
      SnapshotIdentifier: test-snapshot-id

Conditions:
    myRdsDbCreateProdSubFilter: !Or [!Equals [!Ref Env, prod], !Equals [!Ref Env, production], !Equals [!Ref Env, PROD], !Equals [!Ref Env, PRODUCTION]]
    myRdsDbUseSnapshot: !Not [!Equals [!FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, SnapshotIdentifier], ""]]

Resources:
  # Subnet group to control where the DB gets placed
  myRdsDbDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      DBSubnetGroupDescription: Group of subnets to place DB into
      SubnetIds: !Split [ ",", !Ref PrivateSubnets ]

  # Security group to add the DB to the VPC,
  # and to allow the Fargate containers to talk to DB
  myRdsDbSecurityGroup:
    Metadata:
      'aws:copilot:description': 'A security group to access the DB cluster'
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      GroupDescription: "DB Security Group"
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub 'copilot-${App}-${Env}-my-rds-db-RDS-Postgres-SecurityGroup'

  # Enable ingress from other ECS services created within the environment.
  myRdsDbDBIngress:
    Metadata:
      'aws:copilot:description': 'Allow ingress from containers in my application to the DB cluster'
    Type: AWS::EC2::SecurityGroupIngress
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      Description: Ingress from Fargate containers
      GroupId: !Ref 'myRdsDbSecurityGroup'
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !Ref EnvironmentSecurityGroup

  myRdsDbLambdaIngress:
    Metadata:
      'aws:copilot:description': 'Allow ingress from Lambda Functions in my application to the DB'
    Type: AWS::EC2::SecurityGroupIngress
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      Description: Ingress from Lambda Functions to DB
      GroupId: !Ref 'myRdsDbSecurityGroup'
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !Ref 'myRdsDbSecurityGroup'

  myRdsDbSecretsManagerIngress:
    Metadata:
      'aws:copilot:description': 'Allow ingress from Lambda Functions in my application to the Secrets Manager'
    Type: AWS::EC2::SecurityGroupIngress
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      Description: Ingress from Lambda Functions to Secrets Manager
      GroupId: !Ref 'myRdsDbSecurityGroup'
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !Ref 'myRdsDbSecurityGroup'

  myRdsDbLambdaEgress:
    Metadata:
      'aws:copilot:description': 'Allow egress from DB in my application to the Lambda Function'
    Type: AWS::EC2::SecurityGroupEgress
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      Description: Egress from DB to Lambda Functions
      GroupId: !Ref 'myRdsDbSecurityGroup'
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      DestinationSecurityGroupId: !Ref 'myRdsDbSecurityGroup'

  myRdsDbSecretsManagerEgress:
    Metadata:
      'aws:copilot:description': 'Allow egress from Secrets Manager in my application to the Lambda Function'
    Type: AWS::EC2::SecurityGroupEgress
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      Description: Egress from Secrets Manager to Lambda Functions
      GroupId: !Ref 'myRdsDbSecurityGroup'
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationSecurityGroupId: !Ref 'myRdsDbSecurityGroup'

  myRdsDbHTTPSEgress:
    Metadata:
      'aws:copilot:description': 'Allow egress for HTTPS (so the Lambda Function can post a success response back to the Custom Resource)'
    Type: AWS::EC2::SecurityGroupEgress
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      CidrIp: 0.0.0.0/0
      Description: Egress for HTTPS
      GroupId: !Ref 'myRdsDbSecurityGroup'
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443

  myRdsDbRDSDBParameterGroup:
    Metadata:
      'aws:copilot:description': 'A DB parameter group for engine configuration values'
    Type: 'AWS::RDS::DBParameterGroup'
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      Description: !Ref 'AWS::StackName'
      Family: 'postgres13'
      Parameters:
        client_encoding: 'UTF8'
        log_statement: ddl
        log_statement_sample_rate: '1.0'

  myRdsDbKMSKey:
    Type: "AWS::KMS::Key"
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      Description: "KMS Key for RDS encryption"
      KeyPolicy:
        Version: '2012-10-17'
        Id: !Sub '${App}-${Env}-myRdsDb-key'
        Statement:
        - Sid: Enable IAM User Permissions
          Effect: Allow
          Principal:
            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
          Action: kms:*
          Resource: '*'

  myRdsDbKeyAlias:
    Type: 'AWS::KMS::Alias'
    Properties:
      AliasName: !Sub 'alias/${App}-${Env}-myRdsDb-key'
      TargetKeyId: !Ref myRdsDbKMSKey

  # The cluster itself.
  myRdsDbDBInstance:
    Metadata:
      'aws:copilot:description': 'DB cluster'
    Type: AWS::RDS::DBInstance
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: true
      BackupRetentionPeriod: 8
      EnablePerformanceInsights:
        !If [
          myRdsDbUseSnapshot,
          !Ref AWS::NoValue,
          true
        ]
      EnableCloudwatchLogsExports:
        - postgresql
        - upgrade
      Engine: postgres
      EngineVersion: '14.4'
      DBInstanceClass: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DBInstanceClass]
      DBSnapshotIdentifier: !If [myRdsDbUseSnapshot, !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, SnapshotIdentifier], !Ref AWS::NoValue]
      AllocatedStorage: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, AllocatedStorage]
      MaxAllocatedStorage: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, MaxAllocatedStorage]
      StorageType: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, StorageType]
      MultiAZ: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, MultiAZ]
      DBParameterGroupName: !Ref myRdsDbRDSDBParameterGroup
      DBName:
        !If [
          myRdsDbUseSnapshot,
          !Ref AWS::NoValue,
          !Ref myRdsDbDBName
        ]
      KmsKeyId:
        !If [
          myRdsDbUseSnapshot,
          !Ref AWS::NoValue,
          !Ref myRdsDbKMSKey
        ]
      MasterUsername:
        !If [
          myRdsDbUseSnapshot,
          !Ref AWS::NoValue,
          !Join [ "",  [ '{{resolve:secretsmanager:', !Ref myRdsDbRDSSecret, ":SecretString:username}}" ]]
        ]
      MasterUserPassword:
        !If [
          myRdsDbUseSnapshot,
          !Ref AWS::NoValue,
          !Join [ "",  [ '{{resolve:secretsmanager:', !Ref myRdsDbRDSSecret, ":SecretString:password}}" ]]
        ]
      DBSubnetGroupName: !Ref 'myRdsDbDBSubnetGroup'
      VPCSecurityGroups:
        - !Ref myRdsDbSecurityGroup
      StorageEncrypted:
        !If [
          myRdsDbUseSnapshot,
          !Ref AWS::NoValue,
          true
        ]
      DeletionProtection: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionProtection]

  myRdsDbRDSSecret:
    Metadata:
      'aws:copilot:description': 'A Secrets Manager secret to store your DB credentials'
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub '/copilot/${App}/${Env}/secrets/MY_RDS_DB'
      Description: !Sub RDS main user secret for ${AWS::StackName}
      GenerateSecretString:
        SecretStringTemplate: '{"username": "postgres"}'
        GenerateStringKey: "password"
        ExcludePunctuation: true
        IncludeSpace: false
        PasswordLength: 16
        ExcludeCharacters: '[]{}()"@/\;=?&`><:|#'

  myRdsDbSecretRDSAttachment:
    Type: AWS::SecretsManager::SecretTargetAttachment
    Properties:
      SecretId: !Ref myRdsDbRDSSecret
      TargetId: !Ref myRdsDbDBInstance
      TargetType: AWS::RDS::DBInstance

  myRdsDbLambdaFunction:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName: !Sub "${App}-${Env}-rds-create-user"
      Handler: index.handler
      Runtime: python3.11
      Layers:
        - arn:aws:lambda:eu-west-2:763451185160:layer:python-postgres:1
      MemorySize: 128
      Timeout: 10
      Role: !GetAtt myRdsDbLambdaFunctionExecutionRole.Arn
      VpcConfig:
        SecurityGroupIds:
          - !Ref myRdsDbSecurityGroup
        SubnetIds: !Split [ ",", !Ref PrivateSubnets ]
      Code:
        ZipFile: |
          import json

          import boto3
          import cfnresponse
          import psycopg2
          from botocore.exceptions import ClientError


          def drop_user(cursor):
              cursor.execute("SELECT * FROM pg_catalog.pg_user WHERE usename = 'application_user'")

              if cursor.fetchone() is not None:
                  cursor.execute("GRANT application_user TO postgres")
                  cursor.execute("DROP OWNED BY application_user")
                  cursor.execute("DROP USER application_user")


          def create_db_user(conn, cursor, password):
              drop_user(cursor)

              cursor.execute("CREATE USER application_user WITH ENCRYPTED PASSWORD '%s'" % password)
              cursor.execute(
                  "GRANT SELECT, INSERT, UPDATE, DELETE, TRIGGER ON ALL TABLES IN SCHEMA public TO application_user;")
              cursor.execute("GRANT application_user to postgres;")
              cursor.execute(
                  "ALTER DEFAULT PRIVILEGES FOR USER application_user IN SCHEMA public GRANT SELECT, INSERT, UPDATE, DELETE, TRIGGER ON TABLES TO application_user;")
              conn.commit()


          def create_or_update_application_user_secret(ssm, application_user_secret_name,
                                                       application_user_secret_string, event):
              application_user_secret_description = event['ResourceProperties']['SecretDescription']
              copilot_application = event['ResourceProperties']['CopilotApplication']
              copilot_environment = event['ResourceProperties']['CopilotEnvironment']

              application_user_secret = None

              try:
                  application_user_secret = ssm.put_parameter(
                      Name=application_user_secret_name,
                      Description=application_user_secret_description,
                      Value=json.dumps(application_user_secret_string),
                      Tags=[
                          {'Key': 'custom:cloudformation:stack-name', 'Value': event["StackId"].split('/')[1]},
                          {'Key': 'custom:cloudformation:logical-id', 'Value': event["LogicalResourceId"]},
                          {'Key': 'custom:cloudformation:stack-d', 'Value': event["StackId"]},
                          {'Key': 'copilot-application', 'Value': copilot_application},
                          {'Key': 'copilot-environment', 'Value': copilot_environment},
                      ],
                      Type="String",
                  )
              except ClientError as error:
                  if error.response["Error"]["Code"] == "ParameterAlreadyExists":
                      application_user_secret = ssm.put_parameter(
                          Name=application_user_secret_name,
                          Description=application_user_secret_description,
                          Value=json.dumps(application_user_secret_string),
                          Overwrite=True,
                      )

              return application_user_secret


          def handler(event, context):
              print("REQUEST RECEIVED:\n" + json.dumps(event))

              db_master_user_secret = event['ResourceProperties']['MasterUserSecret']
              application_user_secret_name = event['ResourceProperties']['SecretName']
              application_user_secret_description = event['ResourceProperties']['SecretDescription']
              copilot_application = event['ResourceProperties']['CopilotApplication']
              copilot_environment = event['ResourceProperties']['CopilotEnvironment']

              secrets_manager = boto3.client("secretsmanager")
              ssm = boto3.client("ssm")

              master_user = json.loads(secrets_manager.get_secret_value(SecretId=db_master_user_secret)["SecretString"])

              application_user_password = secrets_manager.get_random_password(
                  PasswordLength=16,
                  ExcludeCharacters='[]{}()"@/\;=?&`><:|#',
                  ExcludePunctuation=True,
                  IncludeSpace=False,
              )["RandomPassword"]

              application_user_secret_string = {
                  "username": "application_user",
                  "password": application_user_password,
                  "engine": master_user["engine"],
                  "port": master_user["port"],
                  "dbname": master_user["dbname"],
                  "host": master_user["host"],
                  "dbInstanceIdentifier": master_user["dbInstanceIdentifier"]
              }

              conn = psycopg2.connect(
                  dbname=master_user["dbname"],
                  user=master_user["username"],
                  password=master_user["password"],
                  host=master_user["host"],
                  port=master_user["port"]
              )

              cursor = conn.cursor()

              response = {"Status": "SUCCESS"}

              try:
                  match event["RequestType"]:
                      case "Create":
                          create_db_user(conn, cursor, application_user_password)

                          response = {
                              **response,
                              "Data": create_or_update_application_user_secret(
                                  ssm, application_user_secret_name, application_user_secret_string, event
                              )
                          }
                      case "Update":
                          create_db_user(conn, cursor, application_user_password)

                          response = {
                              **response,
                              "Data": create_or_update_application_user_secret(
                                  ssm, application_user_secret_name, application_user_secret_string, event
                              )
                          }
                      case "Delete":
                          drop_user(cursor)

                          response = {
                              **response,
                              "Data": ssm.delete_parameter(Name=application_user_secret_name)
                          }
                      case _:
                          response = {"Status": "FAILED",
                                      "Data": {"Error": f"""Invalid requestType of '${event["RequestType"]}'"""}}
              except Exception as e:
                  response = {"Status": "FAILED", "Data": {"Error": str(e)}}

              cursor.close()
              conn.close()

              print(json.dumps(response, default=str))
              cfnresponse.send(event, context, response["Status"], response["Data"], event["LogicalResourceId"])

  myRdsDbApplicationUser:
    Type: 'Custom::myRdsDbApplicationUser'
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      ServiceToken: !GetAtt 'myRdsDbLambdaFunction.Arn'
      CopilotApplication: !Sub "${App}"
      CopilotEnvironment: !Sub "${Env}"
      MasterUserSecret: !Ref myRdsDbRDSSecret
      SecretDescription: !Sub RDS application user secret for ${AWS::StackName}
      SecretName: !Sub '/copilot/${App}/${Env}/secrets/MY_RDS_DB_APPLICATION_USER'
      DefaultPublicRoute: !Ref DefaultPublicRoute
      InternetGateway: !Ref InternetGateway
      InternetGatewayAttachment: !Ref InternetGatewayAttachment
      PublicRouteTable: !Ref PublicRouteTable
      PublicSubnet1RouteTableAssociation: !Ref PublicSubnet1RouteTableAssociation
      PublicSubnet2RouteTableAssociation: !Ref PublicSubnet2RouteTableAssociation
    # Resource based metadata block to ignore reference to resources in other addon templates. Do not remove.
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            # https://github.com/aws-cloudformation/cfn-lint/blob/main/docs/rules.md
            - E3005
    DependsOn:
      - VpcEndpoint
      - myRdsDbDBInstance
      - AdditionalNatGateway1
      - AdditionalNatGateway2
      - AdditionalPrivateRoute1
      - AdditionalPrivateRouteTable1
      - AdditionalPrivateRouteTable1Association
      - AdditionalPrivateRoute2
      - AdditionalPrivateRouteTable2
      - AdditionalPrivateRouteTable2Association
      - myRdsDbSecretRDSAttachment
      - myRdsDbDBIngress
      - myRdsDbSecretsManagerIngress
      - myRdsDbLambdaIngress
      - myRdsDbSecretsManagerEgress
      - myRdsDbLambdaEgress
      - myRdsDbHTTPSEgress
      - myRdsDbKeyAlias

  myRdsDbLambdaFunctionExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub "${App}-${Env}-rds-user"
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - 'sts:AssumeRole'
            Principal:
              Service:
                - lambda.amazonaws.com
      Policies:
        - PolicyName: !Sub "${App}-${Env}-rds-user"
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - 'ec2:CreateNetworkInterface'
                  - 'ec2:DescribeNetworkInterfaces'
                  - 'ec2:DeleteNetworkInterface'
                Resource:
                  - '*'
              - Effect: Allow
                Action:
                  - 'ssm:DeleteParameter'
                  - 'ssm:PutParameter'
                  - 'ssm:AddTagsToResource'
                  - 'kms:Decrypt'
                Resource:
                  - '*'
              - Effect: Allow
                Action:
                  - 'secretsmanager:DescribeSecret'
                  - 'secretsmanager:GetRandomPassword'
                  - 'secretsmanager:GetSecretValue'
                Resource:
                  - '*'
              - Effect: Allow
                Action:
                  - 'logs:CreateLogGroup'
                  - 'logs:CreateLogStream'
                  - 'logs:PutLogEvents'
                Resource: 'arn:aws:logs:*:*:*'

  myRdsDbSubscriptionFilter:
    Type: AWS::Logs::SubscriptionFilter
    DependsOn:
      - myRdsDbDBInstance
    Properties:
      RoleArn: !Sub 'arn:aws:iam::${AWS::AccountId}:role/CWLtoSubscriptionFilterRole'
      LogGroupName: !Sub '/aws/rds/instance/${myRdsDbDBInstance}/postgresql'
      FilterName: !Sub '/aws/rds/instance/${App}/${Env}/${myRdsDbDBInstance}/postgresql'
      FilterPattern: ''
      DestinationArn: !If [myRdsDbCreateProdSubFilter, '', '']
